package grapes;

enum Color {
  BLACK = 1;
  WHITE = 2;
  ROSE = 3;
}

message Grape {
  optional string name = 1;
  optional Color color = 2;
  optional string parent1 = 3;
  optional string parent2 = 4;
  repeated string regions = 5;
  repeated string alt_names = 6;
}

